--- a/cloud-eureka-config.yml
+++ b/cloud-eureka-config.yml
@@ -5,6 +5,11 @@ spring:
 ---
 server:
   port: 7004
+  
+spring:
+  profiles: dev
+  application:
+    name: cloud-eureka-config
 
 eureka:
   instance:
@@ -16,14 +21,18 @@ eureka:
       #单机 defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
       #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址（单机）
       defaultZone: http://eureka7004.com:7004/eureka/
-spring:
-  profiles: dev
+
   
   
 ---
 
 server:
   port: 7004
+  
+spring:
+  profiles: test
+  application:
+    name: cloud-eureka-config
 
 eureka:
   instance:
@@ -35,5 +44,3 @@ eureka:
       #单机 defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
       #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址（单机）
       defaultZone: http://eureka7004.com:7004/eureka/
-spring:
-  profiles: test
